--- a/index.html
+++ b/index.html
@@ -1686,7 +1686,7 @@ ${kbRef ? `\nKNOWLEDGE BASE REFERENCE:\n${kbRef}` : ''}`;
 
     function NavIcon({ name, className = "w-5 h-5" }) {
       const icons = {
-        chat: <svg className={className} fill="none" stroke="currentColor" viewBox="0 0 24 24"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth={1.5} d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z" /></svg>,
+        chat: <svg className={className} fill="none" stroke="currentColor" viewBox="0 0 24 24"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth={1.5} d="M9.813 15.904L9 18.75l-.813-2.846a4.5 4.5 0 00-3.09-3.09L2.25 12l2.846-.813a4.5 4.5 0 003.09-3.09L9 5.25l.813 2.846a4.5 4.5 0 003.09 3.09L15.75 12l-2.846.813a4.5 4.5 0 00-3.09 3.09z" /><path strokeLinecap="round" strokeLinejoin="round" strokeWidth={1.5} d="M18.259 8.715L18 9.75l-.259-1.035a3.375 3.375 0 00-2.455-2.456L14.25 6l1.036-.259a3.375 3.375 0 002.455-2.456L18 2.25l.259 1.035a3.375 3.375 0 002.456 2.456L21.75 6l-1.035.259a3.375 3.375 0 00-2.456 2.456z" /></svg>,
         document: <svg className={className} fill="none" stroke="currentColor" viewBox="0 0 24 24"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth={1.5} d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" /></svg>,
         book: <svg className={className} fill="none" stroke="currentColor" viewBox="0 0 24 24"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth={1.5} d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253" /></svg>,
         people: <svg className={className} fill="none" stroke="currentColor" viewBox="0 0 24 24"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth={1.5} d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z" /></svg>,
@@ -1698,6 +1698,83 @@ ${kbRef ? `\nKNOWLEDGE BASE REFERENCE:\n${kbRef}` : ''}`;
         logout: <svg className={className} fill="none" stroke="currentColor" viewBox="0 0 24 24"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth={1.5} d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1" /></svg>,
       };
       return icons[name] || null;
+    }
+
+    // ============================================================
+    // AI AVATAR — sparkle icon with cat easter egg
+    // ============================================================
+
+    // Global scheduler: fires 'cat-easter-egg' event every 1–3 minutes (singleton)
+    const aiEasterEggScheduler = (() => {
+      let initialized = false;
+      return function() {
+        if (initialized) return;
+        initialized = true;
+        const schedule = () => {
+          const delay = 60000 + Math.random() * 120000;
+          setTimeout(() => {
+            window.dispatchEvent(new CustomEvent('cat-easter-egg'));
+            schedule();
+          }, delay);
+        };
+        schedule();
+      };
+    })();
+
+    function AiSparkleIcon() {
+      return (
+        <svg className="w-4 h-4" viewBox="0 0 24 24" fill="white">
+          <path d="M9.5 4.5L11 9.5 16 11l-5 1.5L9.5 17.5 8 12.5 3 11l5-1.5z"/>
+          <path d="M17.5 3l.75 2.25L20.5 6l-2.25.75L17.5 9l-.75-2.25L14.5 6l2.25-.75z"/>
+        </svg>
+      );
+    }
+
+    function CatFaceIcon() {
+      return (
+        <svg className="w-5 h-5" viewBox="0 0 24 24" fill="white">
+          {/* ears */}
+          <path d="M6 12.5V7l4.5 3.5z"/>
+          <path d="M18 12.5V7l-4.5 3.5z"/>
+          {/* eyes */}
+          <ellipse cx="9.5" cy="14.5" rx="1.1" ry="1.4"/>
+          <ellipse cx="14.5" cy="14.5" rx="1.1" ry="1.4"/>
+          {/* nose */}
+          <path d="M12 17l-1.3 1.5h2.6z"/>
+        </svg>
+      );
+    }
+
+    function AiAvatar() {
+      const [isCat, setIsCat] = useState(false);
+      const [flipping, setFlipping] = useState(false);
+      const timersRef = useRef([]);
+
+      useEffect(() => {
+        aiEasterEggScheduler();
+        const handleEgg = () => {
+          timersRef.current.forEach(clearTimeout);
+          timersRef.current = [];
+          setFlipping(true);
+          timersRef.current.push(setTimeout(() => { setFlipping(false); setIsCat(true); }, 280));
+          timersRef.current.push(setTimeout(() => { setFlipping(true); }, 3780));
+          timersRef.current.push(setTimeout(() => { setFlipping(false); setIsCat(false); }, 4060));
+        };
+        window.addEventListener('cat-easter-egg', handleEgg);
+        return () => {
+          window.removeEventListener('cat-easter-egg', handleEgg);
+          timersRef.current.forEach(clearTimeout);
+        };
+      }, []);
+
+      return (
+        <div
+          className="w-7 h-7 bg-blue-500 rounded-full flex items-center justify-center flex-shrink-0 mr-2.5 mt-0.5"
+          style={{ transform: flipping ? 'scaleX(0)' : 'scaleX(1)', transition: 'transform 280ms ease-in-out' }}
+        >
+          {isCat ? <CatFaceIcon /> : <AiSparkleIcon />}
+        </div>
+      );
     }
 
     // ============================================================
@@ -2526,11 +2603,7 @@ ${kbRef ? `\nKNOWLEDGE BASE REFERENCE:\n${kbRef}` : ''}`;
           <div className="flex-1 overflow-y-auto px-6 py-4 space-y-4">
             {messages.map((msg) => (
               <div key={msg.id} className={`flex ${msg.type === 'user' ? 'justify-end' : 'justify-start'} fade-in`}>
-                {msg.type === 'bot' && (
-                  <div className="w-7 h-7 bg-blue-500 rounded-full flex items-center justify-center flex-shrink-0 mr-2.5 mt-0.5">
-                    <span className="text-white text-xs font-bold">C</span>
-                  </div>
-                )}
+                {msg.type === 'bot' && <AiAvatar />}
                 <div style={{ maxWidth: isExpanded ? '90%' : '75%', transition: 'max-width 350ms cubic-bezier(0.4,0,0.2,1)' }} className={`px-4 py-3 rounded-2xl ${
                   msg.type === 'user'
                     ? 'bg-blue-500 text-white rounded-br-md'
@@ -2548,9 +2621,7 @@ ${kbRef ? `\nKNOWLEDGE BASE REFERENCE:\n${kbRef}` : ''}`;
             {/* Typing indicator */}
             {isLoading && (
               <div className="flex justify-start fade-in">
-                <div className="w-7 h-7 bg-blue-500 rounded-full flex items-center justify-center flex-shrink-0 mr-2.5 mt-0.5">
-                  <span className="text-white text-xs font-bold">C</span>
-                </div>
+                <AiAvatar />
                 <div className="bg-white border border-gray-200 px-4 py-3 rounded-2xl rounded-bl-md">
                   <div className="flex gap-1.5">
                     <span className="w-2 h-2 bg-gray-400 rounded-full animate-bounce-dot" style={{ animationDelay: '0s' }}></span>
